--- a/Views/Home/CancionesPopularesAdentroHard.cshtml
+++ b/Views/Home/CancionesPopularesAdentroHard.cshtml
@@ -23,39 +23,26 @@
         <div class="tab-section intro">
             <h3 class="section-title">Intro</h3>
             <pre class="guitar-tab">
-        G                 B
-        e|-----------------|
-        B|-----------------|
-        G|-----------------|
-        D|-----------------|
-        A|--2---2---2---2--|
-        E|--3---3---3---3--|
-            </pre>
-        </div>
+[Intro]    G    B7   Em   C
+           G    D    G    D
 
-        <div class="tab-section verse">
-            <h3 class="section-title">Verso</h3>
-            <pre class="guitar-tab">
-        Em                 C
-        e|-----------------|
-        B|-----------------|
-        G|-----------------|
-        D|-----------------|
-        A|--0---0---0---0--|
-        E|--0---0---0---0--|
-            </pre>
-        </div>
+[Tab - Solo Intro]
 
-        <div class="tab-section chorus">
-            <h3 class="section-title">Coro</h3>
-            <pre class="guitar-tab">
-        G                 D
-        e|-----------------|
-        B|-----------------|
-        G|-----------------|
-        D|-----------------|
-        A|--2---2---2---2--|
-        E|--3---3---3---3--|
+    G                 B7                Em
+e|-----------------|-----------------|-----------------|-----------------|
+B|-----------------|-----------------|----3---4---5---|-----------------|
+G|--4---2---4---2--|--4---2---4---2--|--4---2---2---4-|-----------------|
+D|-----------------|-----------------|--5-------------|-----------------|
+A|-----------------|-----------------|-----------------|-----------------|
+E|-----------------|-----------------|-----------------|-----------------|
+
+    C                 G                  D                 G      D
+e|-----------------|-----------------|-----------------|-----------------|
+B|----3-------------|-----------------|----3-------------|----3-----------|
+G|--5---5---5---4--|--4---2---4---2--|--4---2---4---2--|--4---2---2---4-|
+D|-----------------|-----------------|--5-------------|--5-------------|
+A|-----------------|-----------------|-----------------|-----------------|
+E|-----------------|-----------------|-----------------|-----------------|
             </pre>
         </div>
     </div>
@@ -71,51 +58,13 @@
         <div class="fretboard">
             <!-- Fret numbers at the top -->
             <div class="fret-numbers">
-                <div style="width: 50px;"></div> <!-- Space for string names -->
+                <div class="fret-number-spacer"></div>
                 <div class="fret-number">0</div>
                 <div class="fret-number">1</div>
                 <div class="fret-number">2</div>
                 <div class="fret-number">3</div>
                 <div class="fret-number">4</div>
                 <div class="fret-number">5</div>
-                <div class="fret-number">6</div>
-                <div class="fret-number">7</div>
-                <div class="fret-number">8</div>
-                <div class="fret-number">9</div>
-                <div class="fret-number">10</div>
-                <div class="fret-number">11</div>
-                <div class="fret-number">12</div>
-                <div class="fret-number">13</div>
-                <div class="fret-number">14</div>
-                <div class="fret-number">15</div>
-                <div class="fret-number">16</div>
-                <div class="fret-number">17</div>
-                <div class="fret-number">18</div>
-                <div class="fret-number">19</div>
-            </div>
-
-            <!-- Fret lines -->
-            <div class="fret-lines">
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
-                <div class="fret-line"></div>
             </div>
 
             <div class="strings">
@@ -128,20 +77,6 @@
                     <div class="fret" data-string="1" data-fret="3"></div>
                     <div class="fret" data-string="1" data-fret="4"></div>
                     <div class="fret" data-string="1" data-fret="5"></div>
-                    <div class="fret" data-string="1" data-fret="6"></div>
-                    <div class="fret" data-string="1" data-fret="7"></div>
-                    <div class="fret" data-string="1" data-fret="8"></div>
-                    <div class="fret" data-string="1" data-fret="9"></div>
-                    <div class="fret" data-string="1" data-fret="10"></div>
-                    <div class="fret" data-string="1" data-fret="11"></div>
-                    <div class="fret" data-string="1" data-fret="12"></div>
-                    <div class="fret" data-string="1" data-fret="13"></div>
-                    <div class="fret" data-string="1" data-fret="14"></div>
-                    <div class="fret" data-string="1" data-fret="15"></div>
-                    <div class="fret" data-string="1" data-fret="16"></div>
-                    <div class="fret" data-string="1" data-fret="17"></div>
-                    <div class="fret" data-string="1" data-fret="18"></div>
-                    <div class="fret" data-string="1" data-fret="19"></div>
                 </div>
                 <!-- String 2 (B) -->
                 <div class="string">
@@ -152,20 +87,6 @@
                     <div class="fret" data-string="2" data-fret="3"></div>
                     <div class="fret" data-string="2" data-fret="4"></div>
                     <div class="fret" data-string="2" data-fret="5"></div>
-                    <div class="fret" data-string="2" data-fret="6"></div>
-                    <div class="fret" data-string="2" data-fret="7"></div>
-                    <div class="fret" data-string="2" data-fret="8"></div>
-                    <div class="fret" data-string="2" data-fret="9"></div>
-                    <div class="fret" data-string="2" data-fret="10"></div>
-                    <div class="fret" data-string="2" data-fret="11"></div>
-                    <div class="fret" data-string="2" data-fret="12"></div>
-                    <div class="fret" data-string="2" data-fret="13"></div>
-                    <div class="fret" data-string="2" data-fret="14"></div>
-                    <div class="fret" data-string="2" data-fret="15"></div>
-                    <div class="fret" data-string="2" data-fret="16"></div>
-                    <div class="fret" data-string="2" data-fret="17"></div>
-                    <div class="fret" data-string="2" data-fret="18"></div>
-                    <div class="fret" data-string="2" data-fret="19"></div>
                 </div>
                 <!-- String 3 (G) -->
                 <div class="string">
@@ -176,20 +97,6 @@
                     <div class="fret" data-string="3" data-fret="3"></div>
                     <div class="fret" data-string="3" data-fret="4"></div>
                     <div class="fret" data-string="3" data-fret="5"></div>
-                    <div class="fret" data-string="3" data-fret="6"></div>
-                    <div class="fret" data-string="3" data-fret="7"></div>
-                    <div class="fret" data-string="3" data-fret="8"></div>
-                    <div class="fret" data-string="3" data-fret="9"></div>
-                    <div class="fret" data-string="3" data-fret="10"></div>
-                    <div class="fret" data-string="3" data-fret="11"></div>
-                    <div class="fret" data-string="3" data-fret="12"></div>
-                    <div class="fret" data-string="3" data-fret="13"></div>
-                    <div class="fret" data-string="3" data-fret="14"></div>
-                    <div class="fret" data-string="3" data-fret="15"></div>
-                    <div class="fret" data-string="3" data-fret="16"></div>
-                    <div class="fret" data-string="3" data-fret="17"></div>
-                    <div class="fret" data-string="3" data-fret="18"></div>
-                    <div class="fret" data-string="3" data-fret="19"></div>
                 </div>
                 <!-- String 4 (D) -->
                 <div class="string">
@@ -200,20 +107,6 @@
                     <div class="fret" data-string="4" data-fret="3"></div>
                     <div class="fret" data-string="4" data-fret="4"></div>
                     <div class="fret" data-string="4" data-fret="5"></div>
-                    <div class="fret" data-string="4" data-fret="6"></div>
-                    <div class="fret" data-string="4" data-fret="7"></div>
-                    <div class="fret" data-string="4" data-fret="8"></div>
-                    <div class="fret" data-string="4" data-fret="9"></div>
-                    <div class="fret" data-string="4" data-fret="10"></div>
-                    <div class="fret" data-string="4" data-fret="11"></div>
-                    <div class="fret" data-string="4" data-fret="12"></div>
-                    <div class="fret" data-string="4" data-fret="13"></div>
-                    <div class="fret" data-string="4" data-fret="14"></div>
-                    <div class="fret" data-string="4" data-fret="15"></div>
-                    <div class="fret" data-string="4" data-fret="16"></div>
-                    <div class="fret" data-string="4" data-fret="17"></div>
-                    <div class="fret" data-string="4" data-fret="18"></div>
-                    <div class="fret" data-string="4" data-fret="19"></div>
                 </div>
                 <!-- String 5 (A) -->
                 <div class="string">
@@ -224,20 +117,6 @@
                     <div class="fret" data-string="5" data-fret="3"></div>
                     <div class="fret" data-string="5" data-fret="4"></div>
                     <div class="fret" data-string="5" data-fret="5"></div>
-                    <div class="fret" data-string="5" data-fret="6"></div>
-                    <div class="fret" data-string="5" data-fret="7"></div>
-                    <div class="fret" data-string="5" data-fret="8"></div>
-                    <div class="fret" data-string="5" data-fret="9"></div>
-                    <div class="fret" data-string="5" data-fret="10"></div>
-                    <div class="fret" data-string="5" data-fret="11"></div>
-                    <div class="fret" data-string="5" data-fret="12"></div>
-                    <div class="fret" data-string="5" data-fret="13"></div>
-                    <div class="fret" data-string="5" data-fret="14"></div>
-                    <div class="fret" data-string="5" data-fret="15"></div>
-                    <div class="fret" data-string="5" data-fret="16"></div>
-                    <div class="fret" data-string="5" data-fret="17"></div>
-                    <div class="fret" data-string="5" data-fret="18"></div>
-                    <div class="fret" data-string="5" data-fret="19"></div>
                 </div>
                 <!-- String 6 (Low E) -->
                 <div class="string">
@@ -248,20 +127,6 @@
                     <div class="fret" data-string="6" data-fret="3"></div>
                     <div class="fret" data-string="6" data-fret="4"></div>
                     <div class="fret" data-string="6" data-fret="5"></div>
-                    <div class="fret" data-string="6" data-fret="6"></div>
-                    <div class="fret" data-string="6" data-fret="7"></div>
-                    <div class="fret" data-string="6" data-fret="8"></div>
-                    <div class="fret" data-string="6" data-fret="9"></div>
-                    <div class="fret" data-string="6" data-fret="10"></div>
-                    <div class="fret" data-string="6" data-fret="11"></div>
-                    <div class="fret" data-string="6" data-fret="12"></div>
-                    <div class="fret" data-string="6" data-fret="13"></div>
-                    <div class="fret" data-string="6" data-fret="14"></div>
-                    <div class="fret" data-string="6" data-fret="15"></div>
-                    <div class="fret" data-string="6" data-fret="16"></div>
-                    <div class="fret" data-string="6" data-fret="17"></div>
-                    <div class="fret" data-string="6" data-fret="18"></div>
-                    <div class="fret" data-string="6" data-fret="19"></div>
                 </div>
             </div>
         </div>
