Verificar quitar instrumento

--- a/Views/Account/InformacionUsuario.cshtml
+++ b/Views/Account/InformacionUsuario.cshtml
@@ -33,10 +33,8 @@
                         <a href="@Url.Action("SeleccionarInstrumento", "Account")" class="btn btn-outline-primary w-100">Agregar instrumento</a>
                     }
                     else{
-                        <a href="@Url.Action("SeleccionarInstrumento", "Account")" class="btn btn-outline-primary w-100">Cambiar instrumento</a>
+                        <a href="@Url.Action("CambiarInstrumento", "Account")" class="btn btn-outline-primary w-100">Cambiar instrumento</a>
                     }
-
-                        <a href="@Url.Action("QuitarInstrumento", "Account")" class="btn btn-outline-danger w-100">Quitar instrumento</a>
                     </div>
                 </div>
             </div>
